frdrpc: add node report endpoint, currently only populated with on chain
